--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,10 @@
   </head>
 
   <body>
+    <%= render partial: "shared/navbar" %>
     <%= yield %>
 
-    <%= javascript_include_tag "application" %> <!-- from app/assets/javascripts/application.js -->
+    <%= javascript_include_tag "application" %>
     <%= javascript_pack_tag "application" %>
   </body>
 </html>
