--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -9,7 +9,7 @@
       </div>
     <br>
     <%= render 'form', cocktail: @cocktail %>
-    <%= link_to 'Back', cocktails_path, class: 'btn btn-default' %>
+    <%= link_to 'Back', cocktails_path, class: 'btn btn-primary' %>
     </div>
   </div>
 </div>
