--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,29 +1,106 @@
 $oldrose: #825150;
+$white: #F5F5F5;
+$light: #E0C9CB;
+$tan: #C3A1A0;
+$pink: #D9AAB7;
+$rose: #BA7E7E;
+$dark: #4E4E4E;
 
-i {
+.product i {
   color: $oldrose;
-  font-size: 30px;
+  font-size: 15px;
   vertical-align: middle;
   padding-top: 20px;
-
 }
 
-h1 {
-  color: $oldrose;
+.product ul {
+  list-style: none;
 }
 
-.card-image {
-  background-size: cover;
-  background-position: center;
-  height: 500px;
-  width: 350px;
+.product p {
+  font-size: 0.6em;
+  color: $rose;
+  letter-spacing: 1px;
+}
+
+.product h1 {
+  font-size: 1.4em;
+  color: $dark;
+  margin-top: -5px;
+}
+
+.product h2, a {
+  color: $tan;
+  margin-top: -5px;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+  color: $light;
+}
+
+.card-cocktail {
+  margin-top: 100px;
+  position: relative;
+  width: 520px;
+  height: 350px;
+  background: $white;
+  box-shadow: 5px 5px 15px rgba($rose, .5);
+  border-radius: 10px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 24px;
-  font-weight: bold;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
+
+.card-cocktail img {
+  height: 100%;
+  width: 50%;
+  object-fit: cover;
+}
+
+.product {
+  position: absolute;
+  width: 40%;
+  height: 100%;
+  top: 10%;
+  left: 60%;
+}
+
+.desc {
+  text-transform: none;
+  letter-spacing: 0;
+  margin-bottom: 17px;
+  color: $dark;
+  font-size: .7em;
+  line-height: 1.6em;
+  margin-right: 25px;
+  text-align: justify;
+}
+
+.pick {
+  margin-top: 11px;
+  margin-bottom:0;
+  margin-left: 20px;
+}
+
+.size {
+  padding: 9px;
+  border: 1px solid $light;
+  font-size: 0.7em;
+  text-align: center;
+  &:hover{
+    background: $rose;
+    color: $white;
+    transition: all .4s ease-in-out;
+  }
+}
+
+.buttons a {
+  color: #c84e4b;
+  text-decoration:none;
+  &:hover{
+    color: #ecc2c1;
+    transition: all .4s ease-in-out;
+  }
+}
+
