--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -20,7 +20,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit class: 'btn btn-info btn-block' %>
+    <%= f.submit class: 'btn btn-success' %>
   </div>
   <br>
 <% end %>
