--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
         <%= link_to "Home", cocktails_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Add a new cocktail", new_cocktail_path, class: "btn btn-outline-success my-2 my-sm-0" %>
+        <%= link_to "Add a new cocktail", new_cocktail_path, class: "btn btn-outline-success" %>
       </li>
     </ul>
   </div>
