Add photo upload

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -2,7 +2,7 @@
 
   <div class="card-cocktail">
     <div class="images">
-      <img src="https://images.unsplash.com/photo-1527271982979-83fea3eb3582?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80" />
+      <img src="<%= cl_image_tag @cocktail.photo, height: 260, width: 350, crop: :fill %>" />
     </div>
 
     <div class="product">
@@ -23,3 +23,4 @@
   </div>
 
 </div>
+
