--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -2,7 +2,7 @@
 
   <div class="card-cocktail">
     <div class="images">
-      <img src="<%= cl_image_tag @cocktail.photo, height: 260, width: 350, crop: :fill %>" />
+      <img src="<%= cl_image_path @cocktail.photo, height: 260, width: 350, crop: :fill %>" />
     </div>
 
     <div class="product">
