--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -54,8 +54,8 @@ a:hover {
 
 .card-cocktail img {
   height: 100%;
-  width: 50%;
-  object-fit: fill;
+  width: 70%;
+  object-fit: cover;
 }
 
 .product {
