--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -1,15 +1,10 @@
-<div class="container margin">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-    <div class="card-lg">
-        <div class="card-description">
-          <h1>Edit <%= @cocktail.name %></h1>
-        </div>
-        <%= link_to @cocktail, class: 'card-user white' do %> <i class="fa fa-search"></i> View cocktail <% end %>
-      </div>
+<div class="container">
+  <div class="center-block">
+    <h1>Edit <%= @cocktail.name %></h1>
+    <%= link_to @cocktail, class: 'card-user white' do %> <i class="fa fa-search"></i> View cocktail <% end %>
     <br>
+
     <%= render 'form', cocktail: @cocktail %>
     <%= link_to 'Back', cocktails_path, class: 'btn btn-primary' %>
-    </div>
   </div>
 </div>
