--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -9,18 +9,24 @@
       <p>Recipe</p>
       <h1><%= @cocktail.name %></h1>
       <h2><%= link_to "Edit recipe", edit_cocktail_path(@cocktail) %></h2>
-      <ul class="desc">
-          <li><%= @cocktail.description %>
-          <% @cocktail.doses.each do |dose| %>
-          <%=dose.description %> <%=dose.ingredient.name %><%= link_to cocktail_dose_path(@cocktail, dose), method: :delete do %> <i class="fa fa-trash"></i><% end %>
-          <% end %></li>
-      </ul>
+
+      <%= @cocktail.description %>
+      <% @cocktail.doses.each do |dose| %>
+        <div class="d-flex justify-content-between desc">
+          <span class="d-flex align-items-end">
+            <%=dose.description %> <%=dose.ingredient.name %>
+          </span>
+          <span class=" d-flex align-items-top">
+            <%= link_to cocktail_dose_path(@cocktail, dose), method: :delete do %> <i class="fa fa-trash"></i><br><% end %>
+          </span>
+        </div>
+      <% end %>
+
 
       <button class="buttons">
         <%= link_to "Add a dose", new_cocktail_dose_path(@cocktail) %>
       </button>
     </div>
   </div>
-
 </div>
 
